small scrollbar css fix

--- a/src/css/components/_usp.scss
+++ b/src/css/components/_usp.scss
@@ -5,6 +5,7 @@
   text-align: center;
   scroll-snap-type: x mandatory;
   scroll-padding-left: 2rem;
+  scrollbar-width: 0;
 }
 
 .usp-wrapper {
